Vertex Groups not masking particle hair emission correctly #48118

Closed
opened 2016-04-12 05:08:00 +02:00 by James Guilford · 13 comments

System Information
Windows 10
geforce titan

Blender Version
Broken: 2.77 2050ecc
Worked: 2.77a official

Short description of error
particle hair emitting outside of vertex group (density)

Exact steps for others to reproduce the error

  1. make a vertex group on a subdivided cube
  2. add a particle hair system (i used advanced, with children set to interpolated)
  3. control hair density with the vertex group

Hair should stay within the vertex group but emits outside of it as well.

See Gif
The first frame is the object in edit mode,
the second frame with red particles is 2.77 2050ecc,
the third frame is how it looks in 2.77a official
hair_vgrp_bug_b.gif

**System Information** Windows 10 geforce titan **Blender Version** Broken: 2.77 2050ecc Worked: 2.77a official **Short description of error** particle hair emitting outside of vertex group (density) **Exact steps for others to reproduce the error** 1) make a vertex group on a subdivided cube 2) add a particle hair system (i used advanced, with children set to interpolated) 3) control hair density with the vertex group Hair should stay within the vertex group but emits outside of it as well. See Gif The first frame is the object in edit mode, the second frame with red particles is 2.77 2050ecc, the third frame is how it looks in 2.77a official ![hair_vgrp_bug_b.gif](https://archive.blender.org/developer/F302324/hair_vgrp_bug_b.gif)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @fjg3d

Added subscriber: @fjg3d

#48307 was marked as duplicate of this issue

#48307 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey

Please always attach .blend file which demonstrates the issue.

P.S. From quick tests i can't see difference in behavior between 2.77a and current master.

Please always attach .blend file which demonstrates the issue. P.S. From quick tests i can't see difference in behavior between 2.77a and current master.
Author

File and screenshot of file attached.
This file is from 2050ecc, but also occurs with 4a64b36

blender_2016-04-12_07-30-14.jpg
vtx_grp_hair_density_bug1.blend

File and screenshot of file attached. This file is from 2050ecc, but also occurs with 4a64b36 ![blender_2016-04-12_07-30-14.jpg](https://archive.blender.org/developer/F302469/blender_2016-04-12_07-30-14.jpg) [vtx_grp_hair_density_bug1.blend](https://archive.blender.org/developer/F302470/vtx_grp_hair_density_bug1.blend)

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue, probably own fault, will check later.

Can confirm the issue, probably own fault, will check later.
Bastien Montagne self-assigned this 2016-04-22 19:07:44 +02:00

Added subscriber: @ldo

Added subscriber: @ldo

Caused by own 019ce363b0, only affecting 'random' distributions. Fix incoming.

Caused by own 019ce363b0, only affecting 'random' distributions. Fix incoming.

This issue was referenced by abf6f9f6cf

This issue was referenced by abf6f9f6cf72e7ce0bb5feb9af328fc350e3d700

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Yes, now works OK for me too, thanks.

Yes, now works OK for me too, thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48118
No description provided.